// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Paragraph component Aligned 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  text-align: right;
  color: #262D33;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Paragraph component resized 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 2.875rem;
  font-weight: 400;
  line-height: 4rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  color: #262D33;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Paragraph component text transformed 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: uppercase;
  color: #262D33;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Paragraph component tuncated 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c1 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  color: #262D33;
}

.c0 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<p
  className="c0 c1 c2"
>
  Hello
</p>
`;

exports[`A Paragraph component with variant 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  color: #CC1F36;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Paragrapht component weight 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  color: #262D33;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Text component decorated 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
  text-transform: none;
  color: #262D33;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A Text component wrapped 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  overflow-wrap: break-word;
  color: #262D33;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;

exports[`A default Paragraph component 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
  color: #262D33;
}

<p
  className="c0 c1"
>
  Hello
</p>
`;
